--- a/src/components/Graph/Graph.module.css
+++ b/src/components/Graph/Graph.module.css
@@ -7,3 +7,24 @@
   align-items: center;
   background-color: rgb(157, 157, 214);
 }
+
+.path {
+  stroke-dasharray: 2000;
+  animation: dash 10s linear;
+  animation-fill-mode: forwards;
+}
+
+
+@keyframes dash {
+  from {
+    stroke-dashoffset: 2000;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+
+
+
+
