--- a/src/components/GraphCircle/GraphCircle.module.css
+++ b/src/components/GraphCircle/GraphCircle.module.css
@@ -6,18 +6,19 @@
   justify-content: center;
   align-items: center;
   background-color: rgb(157, 157, 214);
-};
+}
 
-@keyframes stroke {
+@keyframes stroke1 {
   from {
-    stroke-dashoffset: 0;
+    stroke-dashoffset: 0
   }
-};
+}
 
 .Circle {
-  animation: stroke 1s ease-out forwards;
-};
+  animation: stroke1 1s ease-out forwards;
+}
+
 
 circle:hover {
   stroke-width: 70;
-};
+}
