--- a/src/components/VertillePlot/VertillePlot.module.css
+++ b/src/components/VertillePlot/VertillePlot.module.css
@@ -37,7 +37,10 @@
 }
 
 .informationWndow {
-  position: absolute;
-  transition-property: fill;
   transition: 0.5s;  
+}
+
+.informationWndowT {
+ position: relative;
+ transition: 0.5s;  
 }
