Исправление ошибки событий таргета

--- a/src/components/GraphCircle/GraphCircle.module.css
+++ b/src/components/GraphCircle/GraphCircle.module.css
@@ -28,5 +28,8 @@
 
 .informationWndowT {
   position: relative;
-  transition: 0.5s;  
- }
+  transition: 0.5s;
+  width: 80px;
+  height: 30;
+  pointer-events: none;
+}
