Изменил анимацию круга

--- a/src/components/GraphCircle/GraphCircle.module.css
+++ b/src/components/GraphCircle/GraphCircle.module.css
@@ -21,11 +21,12 @@
 }
 
 .CircleStart {
-  animation: stroke 1s ease-out forwards;
+  animation: stroke 1s;
 }
 
 .CircleEnd {
   transition: 0.5s;
+  
 }
 
 .Text, .Circle, .Path {
