В процессе добавление меню редактирование комментария с объектом

--- a/src/components/VertillePlot/VertillePlot.module.css
+++ b/src/components/VertillePlot/VertillePlot.module.css
@@ -29,6 +29,12 @@
   transition: 0.5s;  
 }
 
-.Context {
-  transition: 0.5s;  
+.ButtonMenu {
+  position: relative;
+  width: 100px;
+  height: 200px;
+  top: 50px;
 }
+/* .FormS {
+  align: left;
+} */
