--- a/src/components/VertillePlot/VertillePlot.module.css
+++ b/src/components/VertillePlot/VertillePlot.module.css
@@ -29,9 +29,50 @@
   transition: 0.5s;
 }
 
-.ButtonMenu {
+.ButtonMenu > button{
   position: relative;
-  width: 100px;
-  height: 200px;
-  top: 50px;
+  background: lightgrey;
+  padding: 0.7em;
+  width: 50%;
+  border: 0;
 }
+
+.FormS {
+  text-align: right;
+}
+
+.FormS  div {
+  display: grid;
+  padding: 1em;
+  background: #f9f9f9;
+  border: 1px solid #c1c1c1;
+  margin: 2rem auto 0 auto;
+  max-width: 600px;
+  padding: 1em;
+}
+.FormS > input {
+  background: #fff;
+  border: 1px solid #9c9c9c;
+}
+.FormS > button {
+  background: lightgrey;
+  padding: 0.7em;
+  width: 80%;
+  border: 0;
+}
+button:hover {
+  background: gold;
+}
+
+label {
+  padding: 0.5em 0.5em 0.5em 0;
+}
+
+input {
+  padding: 0.7em;
+  margin-bottom: 0.5rem;
+}
+input:focus {
+  outline: 3px solid gold;
+}
+
