--- a/src/components/LineGraph/LineGraph.module.css
+++ b/src/components/LineGraph/LineGraph.module.css
@@ -7,8 +7,8 @@
   align-items: center;
 }
 
-.containerGradient > path {
-  stroke-dasharray: 1000;
+.Animation {
+  stroke-dasharray: 2000;
   animation: dash 2s linear;
   animation-fill-mode: forwards;
 }
@@ -16,7 +16,7 @@
 
 @keyframes dash {
   from {
-    stroke-dashoffset: 1000;
+    stroke-dashoffset: 2000;
   }
   to {
     stroke-dashoffset: 0;
@@ -26,4 +26,10 @@
 .informationWndow {
   position: relative;
   transition: 0.5s;
+}
+
+.information {
+  width: 500px;
+  height: 400px;
+  background-color: SlateGrey
 }
