--- a/src/components/LineGraph/VertillePlot.module.css
+++ b/src/components/LineGraph/VertillePlot.module.css
@@ -7,7 +7,7 @@
   align-items: center;
 }
 
-.containerGradient > path {
+.containerGradient>path {
   stroke-dasharray: 3000;
   animation: dash 1s linear;
   animation-fill-mode: forwards;
@@ -17,6 +17,7 @@
   from {
     stroke-dashoffset: 3000;
   }
+
   to {
     stroke-dashoffset: 0;
   }
@@ -29,7 +30,9 @@
   flex-direction: column-reverse;
 }
 
-table, th, td {
+table,
+th,
+td {
   border: 1px solid black;
   border-collapse: collapse;
 }
